# NoitaSaveManager

./: .gitignore  Cargo.toml  ProRebuild.md  Readme.md  logger.txt
Linux/: install.sh  noita-save-manager.desktop
cmd/: Cargo.toml
cmd/locales/: app.yml  command_explanation.yml  command_manual.yml  instructions.yml
cmd/src/: cmdline_output.rs  command_parser.rs  main.rs
core/: Cargo.toml
core/locales/: app.yml
core/src/: lib.rs
core/src/utils/: error.rs  file_operator.rs  mod.rs  output_manager.rs  save_infos.rs
docs/: Readme_Simplified_Chinese.md  Readme_Traditional_Chinese.md
gui/: index.html  package-lock.json  package.json
gui/src/: ButtonCallbacks.jsx  CmdExplainTable.jsx  CommandPane.jsx  FloatPane.jsx  Globals.jsx  MessagePane.jsx  MsgStack.jsx  SavesPane.jsx  i18n.js  main.jsx  msgListener.jsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  gui_output.rs  lib.rs  main.rs
gui/src/assets/: Button.css  CmdPaneStyle.css  Controls.css  FloatPaneStyle.css  MessagePaneStyle.css  Style.css  TableStyle.css
gui/src/locales/: en-GB.json  en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
gui/src/locales/zh-CN/: CommandNames.json  common.json
noitarchiver_cmd/: Cargo.toml  build.rs
noitarchiver_cmd/locales/: app.yml  command_explanation.yml  command_manual.yml  instructions.yml
noitarchiver_cmd/src/: cmdline_output.rs  command_parser.rs  main.rs
noitarchiver_core/: Cargo.toml
noitarchiver_core/locales/: app.yml
noitarchiver_core/src/: lib.rs
noitarchiver_core/src/utils/: arch_infos.rs  error.rs  file_operator.rs  mod.rs  output_manager.rs
noitarchiver_gui/: index.html  package-lock.json  package.json
noitarchiver_gui/src/: App.jsx
noitarchiver_gui/src-tauri/: Cargo.toml  tauri.conf.json
noitarchiver_gui/src-tauri/src/: main.rs
