[package]
name = "noitarchiver_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.41"
directories = "6.0.0"
fs2 = "0.4.3"
regex = "1.11.2"
rust-i18n = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sys-locale = "0.3.2"
