[package]
name = "noita_save_manager_gui"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noita_save_manager_core = { path = "../../core/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
